k8s/fm-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-backend
  namespace: feedmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fm-backend-app
  template:
    metadata:
      labels:
        app: fm-backend-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: fm-backend
          image: registry.terzeron.com/terzeron/fm_backend:latest
          ports:
            - containerPort: 8010
          volumeMounts:
            - name: public-html-xml-pvc
              mountPath: /xml
            - name: fma-pvc
              mountPath: /fma
      volumes:
        - name: public-html-xml-pvc
          persistentVolumeClaim:
            claimName: public-html-xml-pvc
        - name: fma-pvc
          persistentVolumeClaim:
            claimName: fma-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-frontend
  namespace: feedmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fm-frontend-app
  template:
    metadata:
      labels:
        app: fm-frontend-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: fm-frontend
          image: registry.terzeron.com/terzeron/fm_frontend:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: fm-backend
  namespace: feedmaker
spec:
  selector:
    app: fm-backend-app
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: fm-frontend
  namespace: feedmaker
spec:
  selector:
    app: fm-frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
